# 22-lesson-hw

./: .env.bstack  .env.credentials.example  .env.local  .env.local_emulator  .gitignore  config.py  pyproject.toml
data/: onboarding.py
tests/android_app/: conftest.py  test_wikipedia.py
utils/: allure.py  file.py
